[gd_scene load_steps=15 format=2]

[ext_resource path="res://codigo/singleplayer/Delgado/04/feedback.gd" type="Script" id=1]
[ext_resource path="res://img/tela_feedback_novo.png" type="Texture" id=2]
[ext_resource path="res://img/tela_score.png" type="Texture" id=3]
[ext_resource path="res://img/corpo_feedback.png" type="Texture" id=4]
[ext_resource path="res://img/feliz_telafeed.png" type="Texture" id=5]
[ext_resource path="res://font/AMPLESOFT MEDIUM.OTF" type="DynamicFontData" id=6]
[ext_resource path="res://img/seguir_2.png" type="Texture" id=7]
[ext_resource path="res://img/seguir_1.png" type="Texture" id=8]
[ext_resource path="res://img/menu_2.png" type="Texture" id=9]
[ext_resource path="res://img/menu_1.png" type="Texture" id=10]
[ext_resource path="res://img/jogarNovamente_1.png" type="Texture" id=11]
[ext_resource path="res://img/jogarNovamente_2.png" type="Texture" id=12]
[ext_resource path="res://img/seta.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 6 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 856.13
margin_top = 204.973
margin_right = 1368.13
margin_bottom = 325.973
texture = ExtResource( 3 )

[node name="corpo" type="TextureRect" parent="."]
visible = false
margin_left = 30.5051
margin_top = 34.2065
margin_right = 681.505
margin_bottom = 941.206
texture = ExtResource( 4 )

[node name="sentimento" type="TextureRect" parent="."]
margin_left = 71.5779
margin_top = 65.0709
margin_right = 483.578
margin_bottom = 729.071
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="."]
margin_left = 495.0
margin_top = 75.0
margin_right = 1348.0
margin_bottom = 206.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Label2" type="Label" parent="."]
margin_left = 871.0
margin_top = 243.0
margin_right = 1356.0
margin_bottom = 313.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.00392157, 0.00392157, 0.00392157, 1 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Seguir" type="TextureButton" parent="."]
visible = false
margin_left = 775.566
margin_top = 412.542
margin_right = 1111.57
margin_bottom = 528.542
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="Menu" type="TextureButton" parent="."]
margin_left = 691.929
margin_top = 591.367
margin_right = 1192.93
margin_bottom = 707.367
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 10 )

[node name="jogarNovamente3" type="TextureButton" parent="."]
visible = false
margin_left = 628.202
margin_top = 404.184
margin_right = 1315.2
margin_bottom = 520.184
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 12 )

[node name="Seguir2" type="TextureButton" parent="."]
visible = false
margin_left = 775.566
margin_top = 414.392
margin_right = 1111.57
margin_bottom = 530.392
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="seta1" type="TextureRect" parent="."]
visible = false
margin_left = 294.522
margin_top = 411.081
margin_right = 368.522
margin_bottom = 482.081
texture = ExtResource( 13 )

[node name="seta2" type="TextureRect" parent="."]
visible = false
margin_left = 243.748
margin_top = 413.44
margin_right = 317.748
margin_bottom = 484.44
texture = ExtResource( 13 )
[connection signal="pressed" from="Seguir" to="." method="_on_Seguir_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="jogarNovamente3" to="." method="_on_jogarNovamente3_pressed"]
[connection signal="pressed" from="Seguir2" to="." method="_on_Seguir2_pressed"]
